# ai410-healthcare-cli-agent

./: CLAUDE.md  README.md  lab31_diff.txt  lab31_transcript.md  lab32_comparison.md  main.py  prompt-log.md  pyproject.toml  validators.py  week3_model_workflow_comparison_memo.md
.claude/: settings.json  settings.local.json
.cursor/plans/: medical_record_summarization_4d8e9546.plan.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
Midterm Artifact Bundle/: responsible_ai_review.md  sprint3_team_formation_notes.md  tasks.md
Week5_Midterm Artifact Bundle/: __init__.py
Week5_Midterm Artifact Bundle/stock_predictor/: gates.py
specs/001-healthcare-cli-agent/: research.md
stock-prediction-midterm/: research.md
tests/: test_summarizer.py  test_week5_adapters.py  test_week5_features.py
week1/: buggy_agent.py
week2/: prompt-log.md  summarizer.py  test_validators.py
week3/: lab31_diff.txt  lab32_comparison.md  week3_model_workflow_comparison_memo.md
week4/: benchmark_results.csv  benchmark_script.py  model_selection_report.md  responsible_ai_risk_review.md
week4_Multi-Model Comparison Tool and Recommendation/: decision_matrix.md  model_selection_report.md  responsible_ai_risk_review.md
week5/Week5 Submission Midterm Artifact/: Gemini_research_output.md  domain.md  prompt-log.md  spec.md  sprint3_team_formation_notes.md
week5/Week5_Midterm Artifact Bundle/: model_selection_rationale.md  plan.md
(+36 files in other folders)
