[project]
name = "ai410"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.92.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langgraph>=1.1.6",
    "llama-index>=0.14.20",
    "openai>=2.31.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
